--- a/style/respensive.css
+++ b/style/respensive.css
@@ -1,139 +1,300 @@
 @media screen and (max-width: 1500px) {
-    .home .home-right p {
-        font-size: 20px!important;
-    }
+  .home .home-right p {
+    font-size: 20px !important;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-    .container-items h1 {
-        font-size: 30px!important;
-    }
+  .container-items h1 {
+    font-size: 30px !important;
+  }
 }
 
 @media screen and (max-width: 1350px) {
+  .collaborator .collaborator-container .container-items {
+    width: 280px !important;
+  }
 
-    .collaborator .collaborator-container .container-items {
-        width: 280px !important;
-    }
+  .home .home-right h1,
+  .home .home-left h1 {
+    font-size: 40px !important;
+  }
 
-    .home .home-right h1, 
-    .home .home-left h1 {
-        font-size: 40px !important;
-    }
+  .home .home-right p,
+  .home .home-left p {
+    font-size: 15px !important;
+  }
 
-    .home .home-right p, 
-    .home .home-left p {
-        font-size: 15px !important;
-    }
-
-    .collaborator .collaborator-container {
-        flex-wrap: wrap;
-        gap: 24px;
-    }
-
+  .collaborator .collaborator-container {
+    flex-wrap: wrap;
+    gap: 24px;
+  }
 }
 
 @media screen and (max-width: 1150px) {
-    .about .about-container {
-        flex-wrap: wrap;
-        gap: 24px;
-    }
+  .about .about-container {
+    flex-wrap: wrap;
+    gap: 24px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    .home {
-        width: 100% !important;
-        overflow-x: hidden;
-    }
+  .home {
+    width: 100% !important;
+    overflow-x: hidden;
+  }
 
-    .home .home-right p, 
-    .home .home-left p {
-        font-size: 18px !important;
-    }
+  .home .home-right p,
+  .home .home-left p {
+    font-size: 18px !important;
+  }
 
-    .home .home-left,
-    .home .home-right {
-        width: 50% !important;
-    }
+  .home .home-left,
+  .home .home-right {
+    width: 50% !important;
+  }
 }
 
 @media screen and (max-width: 900px) {
-    .collaborator .collaborator-title-container .collaborator-title,
-    .collaborator .collaborator-title-container .collaborator-subtitle
-    {
-        font-size: 35px !important;
-    }
+  .collaborator .collaborator-title-container .collaborator-title,
+  .collaborator .collaborator-title-container .collaborator-subtitle {
+    font-size: 35px !important;
+  }
 
-    .about .about-title-container .about-title,
-    .about .about-title-container .collaborator-subtitle
-    {
-        font-size: 35px !important;
-    }
+  .about .about-title-container .about-title,
+  .about .about-title-container .collaborator-subtitle {
+    font-size: 35px !important;
+  }
 
-    .home .home-left h1, .home .home-right h1 {
-        font-size: 20px !important;
-    }
+  .home .home-left h1,
+  .home .home-right h1 {
+    font-size: 20px !important;
+  }
 
-    .home .home-left img, .home .home-right img {
-        height: 20% !important;
-    }
+  .home .home-left img,
+  .home .home-right img {
+    height: 50% !important;
+  }
 
-    .collaborator .collaborator-container .container-items {
-        width: 100% !important;
-    }
+  .collaborator .collaborator-container .container-items {
+    width: 100% !important;
+  }
 }
 
 @media screen and (max-width: 700px) {
-    .collaborator .collaborator-title-container .collaborator-title,
-    .collaborator .collaborator-title-container .collaborator-subtitle
-    {
-        font-size: 23px !important;
-    }
+  .collaborator .collaborator-title-container .collaborator-title,
+  .collaborator .collaborator-title-container .collaborator-subtitle {
+    font-size: 23px !important;
+  }
 
-    .about .about-title-container .about-title,
-    .about .about-title-container .collaborator-subtitle,
-    .about .about-title-container h1
-    {
-        font-size: 23px !important;
-    }
+  .about .about-title-container .about-title,
+  .about .about-title-container .collaborator-subtitle,
+  .about .about-title-container h1 {
+    font-size: 23px !important;
+  }
 
-    .home .home-left a,
-    .home .home-right a {
-        font-size: 12px !important;
-    }
+  .home .home-left a,
+  .home .home-right a {
+    font-size: 10px !important;
+  }
 
-    .collaborator .collaborator-title-container .collaborator-title,
-    .collaborator .collaborator-title-container .collaborator-subtitle
-    {
-        font-size: 35px !important;
-    }
+  .collaborator .collaborator-title-container .collaborator-title,
+  .collaborator .collaborator-title-container .collaborator-subtitle {
+    font-size: 35px !important;
+  }
 
-    .about .about-title-container .about-title,
-    .about .about-title-container .collaborator-subtitle
-    {
-        font-size: 35px !important;
-    }
+  .about .about-title-container .about-title,
+  .about .about-title-container .collaborator-subtitle {
+    font-size: 35px !important;
+  }
 
-    .home {
-        flex-direction: column !important;
-    }
+  .home {
+    flex-direction: column !important;
+  }
 
-    .home .home-left h1, .home .home-right h1 {
-        font-size: 20px !important;
-    }
+  .home .home-left h1,
+  .home .home-right h1 {
+    font-size: 20px !important;
+  }
 
-    .home .home-left img, .home .home-right img {
-        width: 100% !important;
-    }
+  .home .home-left img,
+  .home .home-right img {
+    width: 100% !important;
+  }
 
-    .collaborator .collaborator-container .container-items {
-        width: 100% !important;
-    }
+  .collaborator .collaborator-container .container-items {
+    width: 100% !important;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .contact .contact-container {
-        width: 250px;
-        height: 400px;
+  .contact .contact-container {
+    width: 250px;
+    height: 400px;
+  }
+}
+
+/* Admin Panel */
+
+@media screen and (max-width: 900px) {
+  .admin-global {
+    grid-template-columns: none;
+    position: relative;
+
+    .admin-nav {
+      display: flex;
+      position: absolute;
+      transform: translateX(-100%);
+      transition: transform 0.4s ease-out;
+      z-index: 99;
+
+      h1 {
+        opacity: 0;
+      }
+
+      &.open {
+        transform: translateX(0%);
+      }
     }
+
+    .admin-container {
+      div {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+      }
+
+      .humburger {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        border: none;
+        display: flex;
+        align-items: center;
+        position: relative;
+        background: var(--background);
+        z-index: 999;
+
+        span {
+          display: block;
+          width: 100%;
+          height: 2px;
+          background: var(--text);
+          position: absolute;
+          pointer-events: none;
+          transition: opacity 0.3s 0.15s ease-out;
+        }
+
+        span:nth-child(1),
+        span:nth-child(3) {
+          transition: transform 0.3s ease-out;
+        }
+
+        span:nth-child(1) {
+          transform: translateY(7px);
+        }
+        span:nth-child(2) {
+          transform: translateY(-7px);
+        }
+
+        &.open span:nth-child(1) {
+          transform: translate(0) rotate(135deg);
+        }
+        &.open span:nth-child(2) {
+          opacity: 0;
+          transition: opacity 0s ease-out;
+        }
+        &.open span:nth-child(3) {
+          transform: translate(0) rotate(-135deg);
+        }
+      }
+
+      .info-user p {
+        display: none;
+      }
+
+      .info-user:hover {
+        content: "mforest@cybernova.fr";
+      }
+    }
+
+    .admin-content-contact {
+      grid-column: 1;
+      grid-row: 2;
+
+      .admin-info {
+        display: none;
+      }
+
+      .admin-results {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        padding: 15px;
+        flex-direction: column !important;
+      }
+    }
+
+    .admin-content-security {
+      grid-column: 1;
+      grid-row: 2;
+
+      .admin-info {
+        display: none;
+      }
+
+      .admin-results {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        padding: 15px;
+        flex-direction: column !important;
+      }
+    }
+
+    .module-reply {
+      width: 50%;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .module-reply {
+    width: 90% !important;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .admin-global {
+    .admin-content-security {
+      grid-template-columns: repeat(1, 1fr) !important;
+
+      .admin-grid:nth-child(1) {
+        border-right: none;
+        border-bottom: 1px solid #c5c5c6;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .admin-global {
+    .admin-content-security {
+      .admin-infos {
+        display: none !important;
+      }
+
+      .users-items {
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
+  }
 }
